# podcast_ai_player

./: .env.example  .gitignore  README.md  app.py  index.html  requirements.txt  setup.cfg
pitch/: chatgpt.0.txt  claude.0.txt  claude.txt  deppseek.0.txt  gemini.0.txt
static/: bak.script.js  bak2.script.js  new.styles.css  old.styles.css  script.js  styles.css
templates/: index.html
utils/: get_audio_from_yt.py
