[metadata]
name = audio-transcription-app
version = 0.1.0
description = A web application for audio transcription and analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/audio-transcription-app # Replace with your repository URL
author = Luca Rubini
author_email = your.email@example.com
license = MIT # Or another appropriate license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    Flask>=2.3.3
    Flask-Cors>=3.0.10
    python-dotenv>=1.0.0
    pydub>=0.25.1
    openai-whisper>=20231117
    requests>=2.31.0
    azure-cognitiveservices-speech>=1.36.0
    azure-identity>=1.15.0

[options.packages.find]
exclude =
    tests*
    docs*
